--- a/result/views/index.html
+++ b/result/views/index.html
@@ -19,12 +19,12 @@
     <div id="content-container">
       <div id="content-container-center">
         <div id="choice">
-          <div class="choice CSK">
+          <div class="choice csk">
             <div class="label">CSK</div>
             <div class="stat">{{aPercent | number:1}}%</div>
           </div>
           <div class="divider"></div>
-          <div class="choice RCB">
+          <div class="choice rcb">
             <div class="label">RCB</div>
             <div class="stat">{{bPercent | number:1}}%</div>
           </div>
