--- a/result/views/index.html
+++ b/result/views/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="CSKvsRCB">
+<html ng-app="cskvsrcb">
   <head>
     <meta charset="utf-8">
     <title>CSK vs RCB -- Result</title>
@@ -20,12 +20,12 @@
       <div id="content-container-center">
         <div id="choice">
           <div class="choice csk">
-            <div class="label"> *CSK* </div>
+            <div class="label">CSK</div>
             <div class="stat">{{aPercent | number:1.5}}%</div>
           </div>
           <div class="divider"></div>
           <div class="choice rcb">
-            <div class="label"> *RCB* </div>
+            <div class="label">RCB</div>
             <div class="stat">{{bPercent | number:1.5}}%</div>
           </div>
         </div>
