--- a/result/views/index.html
+++ b/result/views/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="cskvsrcb">
+<html ng-app="CSKvsRCB">
   <head>
     <meta charset="utf-8">
     <title>CSK vs RCB -- Result</title>
@@ -19,14 +19,14 @@
     <div id="content-container">
       <div id="content-container-center">
         <div id="choice">
-          <div class="choice csk">
+          <div class="choice CSK">
             <div class="label">CSK</div>
-            <div class="stat">{{aPercent | number:1.5}}%</div>
+            <div class="stat">{{aPercent | number:1}}%</div>
           </div>
           <div class="divider"></div>
-          <div class="choice rcb">
+          <div class="choice RCB">
             <div class="label">RCB</div>
-            <div class="stat">{{bPercent | number:1.5}}%</div>
+            <div class="stat">{{bPercent | number:1}}%</div>
           </div>
         </div>
       </div>
