--- a/result/views/index.html
+++ b/result/views/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html ng-app="JaganvsPSPK">
+<html ng-app="CatsvsDogs">
   <head>
     <meta charset="utf-8">
-    <title>Jagan vs PSPK -- Result</title>
+    <title>Cats vs Dogs -- Result</title>
     <base href="/index.html">
     <meta name = "viewport" content = "width=device-width, initial-scale = 1.0">
     <meta name="keywords" content="docker-compose, docker, stack">
@@ -19,13 +19,13 @@
     <div id="content-container">
       <div id="content-container-center">
         <div id="choice">
-          <div class="choice Jagan">
-            <div class="label">Jagan</div>
+          <div class="choice Cats">
+            <div class="label">Cats</div>
             <div class="stat">{{aPercent | number:1}}%</div>
           </div>
           <div class="divider"></div>
-          <div class="choice PSPK">
-            <div class="label">PSPK</div>
+          <div class="choice Dogs">
+            <div class="label">Dogs</div>
             <div class="stat">{{bPercent | number:1}}%</div>
           </div>
         </div>
