--- a/result/views/index.html
+++ b/result/views/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="CatsvsDogs">
+<html ng-app="catsvsdogs">
   <head>
     <meta charset="utf-8">
     <title>Cats vs Dogs -- Result</title>
@@ -19,12 +19,12 @@
     <div id="content-container">
       <div id="content-container-center">
         <div id="choice">
-          <div class="choice Cats">
+          <div class="choice cats">
             <div class="label">Cats</div>
             <div class="stat">{{aPercent | number:1}}%</div>
           </div>
           <div class="divider"></div>
-          <div class="choice Dogs">
+          <div class="choice dogs">
             <div class="label">Dogs</div>
             <div class="stat">{{bPercent | number:1}}%</div>
           </div>
