--- a/result/views/index.html
+++ b/result/views/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html ng-app="indiavssrilanka">
+<html ng-app="abcdvsefgh">
   <head>
     <meta charset="utf-8">
-    <title>India vs Srilanka -- Result</title>
+    <title>ABCD vs EFGH -- Result</title>
     <base href="/index.html">
     <meta name = "viewport" content = "width=device-width, initial-scale = 1.0">
     <meta name="keywords" content="docker-compose, docker, stack">
@@ -19,13 +19,13 @@
     <div id="content-container">
       <div id="content-container-center">
         <div id="choice">
-          <div class="choice india">
-            <div class="label">India</div>
+          <div class="choice abcd">
+            <div class="label">ABCD</div>
             <div class="stat">{{aPercent | number:1}}%</div>
           </div>
           <div class="divider"></div>
-          <div class="choice srilanka">
-            <div class="label">Srilanka</div>
+          <div class="choice efgh">
+            <div class="label">EFGH</div>
             <div class="stat">{{bPercent | number:1}}%</div>
           </div>
         </div>
