--- a/result/views/index.html
+++ b/result/views/index.html
@@ -2,7 +2,7 @@
 <html ng-app="abcdvsefgh">
   <head>
     <meta charset="utf-8">
-    <title>ABCD vs EFGH -- Result</title>
+    <title>Abcd vs Efgh -- Result</title>
     <base href="/index.html">
     <meta name = "viewport" content = "width=device-width, initial-scale = 1.0">
     <meta name="keywords" content="docker-compose, docker, stack">
@@ -20,12 +20,12 @@
       <div id="content-container-center">
         <div id="choice">
           <div class="choice abcd">
-            <div class="label">ABCD</div>
+            <div class="label">Abcd</div>
             <div class="stat">{{aPercent | number:1}}%</div>
           </div>
           <div class="divider"></div>
           <div class="choice efgh">
-            <div class="label">EFGH</div>
+            <div class="label">Efgh</div>
             <div class="stat">{{bPercent | number:1}}%</div>
           </div>
         </div>
