--- a/result/views/index.html
+++ b/result/views/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html ng-app="abcdvsefgh">
+<html ng-app="cskvsrcb">
   <head>
     <meta charset="utf-8">
-    <title>Abcd vs Efgh -- Result</title>
+    <title>CSK vs RCB -- Result</title>
     <base href="/index.html">
     <meta name = "viewport" content = "width=device-width, initial-scale = 1.0">
     <meta name="keywords" content="docker-compose, docker, stack">
@@ -19,13 +19,13 @@
     <div id="content-container">
       <div id="content-container-center">
         <div id="choice">
-          <div class="choice abcd">
-            <div class="label">Abcd</div>
+          <div class="choice csk">
+            <div class="label">CSK</div>
             <div class="stat">{{aPercent | number:1}}%</div>
           </div>
           <div class="divider"></div>
-          <div class="choice efgh">
-            <div class="label">Efgh</div>
+          <div class="choice rcb">
+            <div class="label">RCB</div>
             <div class="stat">{{bPercent | number:1}}%</div>
           </div>
         </div>
